{
    "name": "CameraControls",
    "maps": [
        {
            "name": "Camera",
            "id": "a121b79a-241a-465d-9091-b5ccb4486304",
            "actions": [
                {
                    "name": "MoveCameraUp",
                    "type": "Button",
                    "id": "1aa1ab86-2f36-4411-9c5b-1968d836112b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MoveCameraDown",
                    "type": "Button",
                    "id": "49e6cc5b-5de7-44a3-9ec8-2116e4ce18e5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MoveCameraLeft",
                    "type": "Button",
                    "id": "164d925a-70c6-4567-94a2-e54cd65457b6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MoveCameraRight",
                    "type": "Button",
                    "id": "afcfa294-e82c-44fa-9840-40fabdc71de1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RotateCameraLeft",
                    "type": "Button",
                    "id": "6d00df04-e664-407e-af2f-30a546237ca2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RotateCameraRight",
                    "type": "Button",
                    "id": "5b0adafa-870f-4ea9-b6cc-92cee3cdab7d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MouseScrollY",
                    "type": "PassThrough",
                    "id": "40f8dcc8-9e9c-447f-a92c-ebfb19149603",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ZoomIn",
                    "type": "Value",
                    "id": "8f17beda-4b1e-480c-b2f3-65ef2d28eefb",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9e7dbd9c-22b9-4cd4-a15c-05275e754344",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveCameraUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "da8da05b-2c03-46c4-bc88-bafa2c59d954",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveCameraDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "760075e0-9066-4af1-a1d9-7c3536a922e3",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveCameraLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "583599a1-6640-4796-808a-4ce3772691df",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveCameraRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "88e58581-b2f0-4f32-84a4-9801dd70b2ee",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateCameraLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "64a6f997-c42b-489d-b9a9-f2702c8ee2e6",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateCameraRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "119d50bd-3532-4e46-bc1a-82ef446091c1",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseScrollY",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "72f98257-494d-46df-8ded-41f2d5c923bb",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ZoomIn",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}